--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,14 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
-        
+
+            <!--  Gson: Java to Json conversion -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.8.5</version>
+                <scope>compile</scope>
+            </dependency>
     </dependencies>
 
     <build>
