--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
                 <version>2.8.5</version>
                 <scope>compile</scope>
             </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.27.0</version>
+        </dependency>
+        
     </dependencies>
 
     <build>
